update: added user details and update profile api
